# git-websocket-notifier

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  filesystem-watcher-comparison.md  package.json  websocket-server.js
src/: main.cpp
